--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
+  font-size: 10px;
   line-height: 24px;
   font-weight: 400;
 
@@ -15,7 +15,9 @@
   -webkit-text-size-adjust: 100%;
 }
 
-
+body {
+  font-size:1.6rem;
+}
 
 @media (prefers-color-scheme: light) {
   :root {
